# HealthChain

./: .aiignore  Cargo.toml  DEMO_README.md  DEMO_SCRIPT.md  README.md  TESTS_README.md  TEST_COVERAGE.md  TODO_PHASE2.md  canister_ids.json  dataset_manager.did  dfx.json  icrc1_ledger.did  lib.rs  package-lock.json  package.json
src/Hospital_Chain_backend/: Cargo.toml  Hospital_Chain_backend.did
src/Hospital_Chain_backend/src/: lib.rs  tempCodeRunnerFile.rs
src/Hospital_Chain_frontend/: package.json  tailwind.config.js  vite.config.js.timestamp-1757636828678-a00e95c0e47d08.mjs
src/Hospital_Chain_frontend/src/: App.jsx  index.scss  main.jsx
src/Hospital_Chain_frontend/src/components/: AuditLogTable.jsx  DeveloperOverlay.jsx  FeatureCard.jsx  Footer.jsx  Hero.jsx  JudgeTour.jsx  Navbar.jsx  PassphraseModal.jsx  PrivateKeyModal.jsx  RegistrationModal.jsx  RoleDiagram.jsx  Timeline.jsx  Toast.jsx
src/Hospital_Chain_frontend/src/data/: demo-seed.json
src/Hospital_Chain_frontend/src/pages/: AdminPortal.jsx  Demo.jsx  Doctor.jsx  DoctorDashboard.jsx  Home.jsx  NotFound.jsx  Patient.jsx  PatientDashboard.jsx  Profile.jsx  RecordViewer.jsx  Researcher.jsx  ResearcherDashboard.jsx
src/Hospital_Chain_frontend/src/tests/: cryptoKeys.test.js  keyStore.test.js  (+1 more)
src/dataset_manager/: Cargo.toml  dataset_manager.did
src/dataset_manager/src/: lib.rs
src/icrc1_ledger/: Cargo.toml  icrc1_ledger.did
src/icrc1_ledger/src/: lib.rs
src/research_marketplace/: Cargo.toml  research_marketplace.did
src/research_marketplace/src/: lib.rs
src/utils/: AuthContext.jsx
(+7 files in other folders)
