[package]
name = "research_marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18" # Keep these versions in sync for compatibility
ic-cdk-macros = "0.18" # Keep these versions in sync for compatibility
ic-cdk-timers = "0.12" # Update this to a compatible version
ic-stable-structures = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
sha2 = "0.10.9"